namespace Game.Constants
{
    public static class PlayerMovementConstants
    {
        public const string SPEED_PARAM     = "Speed";
        public const string INPUT_X_PARAM   = "InputX";
        public const string INPUT_Y_PARAM   = "InputY";
        public const string DIRECTION_PARAM = "Direction";
    }
}